src/objects/Candidate__c.object
<CustomObject>
    <description>Represents an applicant who might apply for one or more positions</description>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <formula>IF( Total_Reviews__c  &lt;&gt; 0 , Total_Rating__c  /  Total_Reviews__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City of the candidate</description>
        <inlineHelpText>City of the candidate</inlineHelpText>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country of the candidate</description>
        <inlineHelpText>Country of the candidate</inlineHelpText>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <description>Current Employer of the candidate</description>
        <inlineHelpText>Current Employer of the candidate</inlineHelpText>
        <label>Current Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Employeed__c</fullName>
        <defaultValue>true</defaultValue>
        <description>checked-currently employed
unchecked- not currently employed</description>
        <inlineHelpText>checked-currently employed
unchecked- not currently employed</inlineHelpText>
        <label>Currently Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <description>Education details of the candidates</description>
        <inlineHelpText>Education details of the candidates</inlineHelpText>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>HS Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA/BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA/MS/MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ph.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Doc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of the candidate</description>
        <externalId>true</externalId>
        <inlineHelpText>Email of the candidate</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax number of the candidate</description>
        <inlineHelpText>Fax number of the candidate</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name of the candidate</description>
        <externalId>true</externalId>
        <inlineHelpText>First Name of the candidate</inlineHelpText>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name of the candidate</description>
        <externalId>true</externalId>
        <inlineHelpText>Last Name of the candidate</inlineHelpText>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Mobile number of the candidate</description>
        <inlineHelpText>Mobile number of the candidate</inlineHelpText>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone number of the candidate</description>
        <inlineHelpText>Phone number of the candidate</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Checking data loading operation for MD relationship.. No any significance for recruiting app</description>
        <inlineHelpText>Checking data loading operation for MD relationship.. No any significance for recruiting app</inlineHelpText>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <description>Social Security Number of the candidate</description>
        <inlineHelpText>Social Security Number of the candidate</inlineHelpText>
        <label>SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>State/Province of the candidate</description>
        <inlineHelpText>State/Province of the candidate</inlineHelpText>
        <label>State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street address of the candidate</description>
        <inlineHelpText>Street address of the candidate</inlineHelpText>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Rating__c</fullName>
        <description>Total rating</description>
        <inlineHelpText>Total rating</inlineHelpText>
        <label>Total Rating</label>
        <summarizedField>CandidateReview__c.Rating__c</summarizedField>
        <summaryForeignKey>CandidateReview__c.Candidate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Reviews__c</fullName>
        <description>Total no. of reviews</description>
        <inlineHelpText>Total no. of reviews</inlineHelpText>
        <label>Total Reviews</label>
        <summaryForeignKey>CandidateReview__c.Candidate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>US_Citizen__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked-US Citizen
Unchecked- Non US Citizen</description>
        <inlineHelpText>Checked-US Citizen
Unchecked- Non US Citizen</inlineHelpText>
        <label>US Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visa_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked-Visa Required
Unchecked-Visa Not Required</description>
        <inlineHelpText>checked-Visa Required
UncheckedVisa Not Required</inlineHelpText>
        <label>Visa Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <description>Total years of the experience candidate have</description>
        <inlineHelpText>Total years of the experience candidate have</inlineHelpText>
        <label>Years of Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Zip/Postal Code of the candiate</description>
        <inlineHelpText>Zip/Postal Code of the candiate</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>